@@ -1,3 +1,7 @@
+2010-03-20 Homer Xing <homer.xing@gmail.com>
+
+    * Remove "Offline installation" functionality.
+
 2010-03-20 MA Yue <velly.empire@gmail.com>
 
     * Improve Java version display.
